
syntax = "proto3";


// 1
message Message {
    string contents = 1;
    bytes from = 2;
    bytes to = 3;
}

message ClientHello {
    bytes name = 1;
}

message ClientHelloReply {
    bytes grpc_host = 1;
    bytes nsb_host = 2;
}

message RequestComingRequest {
    bytes session_id = 1;
    bytes grpc_host = 2;
    bytes nsb_host = 3;
}

message RequestComingReply {
    bool ok = 1;
}

message RequestGrpcServiceRequest {
    bytes name = 1;
}

message RequestGrpcServiceReply {
    bytes grpc_host = 1;
}

message RequestNsbServiceRequest {
    bytes name = 1;
}

message RequestNsbServiceReply {
    bytes nsb_host = 1;
}

message SessionListRequest {
}

message SessionListReply {
    repeated bytes session_ids = 1;
    repeated bytes grpc_host = 2;
    bytes default_nsb_host = 3;
}

message TransactionListRequest {
}

message TransactionListReply {
    // with help info
    repeated bytes transactions = 1;
    repeated bytes grpc_host = 2;
    bytes default_nsb_host = 3;
}

message Account {
    uint64 chain_id = 1;
    bytes address = 2;
}

message UserRegisterRequest {
    Account account = 1;
    string user_name = 2;
}

message UserRegisterReply {
    bool ok = 1;
    uint64 characteristic_flag = 2;
}
